added pricing logic for all 3 scenarios

--- a/template.yml
+++ b/template.yml
@@ -50,6 +50,8 @@ Resources:
           Properties:
             Path: /api/checkout
             Method: GET
+            Auth:
+              Authorizer: NONE
 Outputs:
   WebEndpoint:
     Description: "API Gateway endpoint URL for Prod stage"
